Fix missing margin

--- a/discordfx/styles/discord.css
+++ b/discordfx/styles/discord.css
@@ -639,6 +639,10 @@ code
     }
 }
 
+.divider {
+    margin: 0 5px;
+}
+
 li 
 {
     display: block;
